      - support for ordering according to values of '_atom_type_*' CIF
        loop.
    - cif_CODify:
      - an error message regarding the mandatory input CIF file.
    - COD::AtomProperties assembler:
      - covalent radii from Meng1991.
    - COD::CIF::Data:
      - the calculate_shelx_checksum() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_attached_hydrogens() subroutine.
    - COD::CIF::Data::Check
      - the check_shelx_checksums() subroutine;
      - a note message informing that the mandatory presence of atom
        displacement parameters will not be checked due to missing
        publication year;
      - a warning message informing that the mandatory presence of
        atom displacement parameters will not be checked due to an
        improper publication year value.
    - COD::CIF::DDL::DDLm:
      - the get_all_data_names() subroutine;
      - a warning message about the treatment of save frames
        without the _definition.id data item in the build_ddlm_dic
        subroutine.
    - COD::ToolsVersion:
      - the get_version_number() and get_version_string() subroutines.
  * Changed:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_mol() subroutine is no longer
        deprecated;
      - implemented reading of coordinates in
        neighbour_list_from_chemistry_mol().
    - COD::CIF::Data::Check:
      - updated the warning message generated by
        the check_temperature_factors() subroutine.
    - COD::CIF::Data::AtomList:
      - oxidation state is now read from '_atom_type_oxidation_number'
        CIF data item, if available.
    - COD::CIF::DDL::DDLm::Validate:
      - updated the detection and reporting of problems that may potentially
        occur in the DICTIONARY_VALID loop of the DDLm reference dictionary.
    - COD::CIF::Unicode2CIF:
      - mapped the capital sharp S ('ẞ') to the '\&S' CIF special code;
      - mapped the CIF special code for a delocalized double bond ('\\dbb ')