@@ -18,8 +18,9 @@ cod-tools (unreleased)
       - the calculate_shelx_checksum() subroutine.
     - COD::CIF::Data::CODFlags:
       - the has_attached_hydrogens() subroutine.
-    - COD::CIF::Data::Check
+    - COD::CIF::Data::Check:
       - the check_shelx_checksums() subroutine;
+      - the check_adp_presence() subroutine.
       - a note message informing that the mandatory presence of atom
         displacement parameters will not be checked due to missing
         publication year;
@@ -85,6 +86,8 @@ cod-tools (unreleased)
       - updated the script to recognise dictionaries that have a major
         version of '4' as DDLm dictionaries.
   * Deprecated:
+    - COD::CIF::Data::Check:
+      - the check_temperature_factors() subroutine.
     - COD::ToolsVersion
       - the $COD::ToolsVersion::Version package variable.
   * Fixed:
